force-app/main/default/objects/Stage_Connection__c/Stage_Connection__c.object-meta.xml
<CustomObject>
    <label>Stage Connection</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Stage Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>