force-app/main/default/objects/Stage_Connection__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Next_Stage_Connection__r.Stage__r.Id, Next_Stage_Connection__r.Stage__r.Display_Name__c, &quot;_self&quot;)</formula>
    <label>Next Stage</label>
    <type>Text</type>
</CustomField>